# Building-Firmware-with-CMake

./: Dockerfile
.devcontainer/: devcontainer.json
Chapter01/: CMakeLists.txt  main.c
Chapter01/inc/: print_hello.h
Chapter01/src/: print_hello.c
Chapter02/it-builds/: CMakeLists.txt
Chapter02/it-configures/: CMakeLists.txt
Chapter02/it-runs/: CMakeLists.txt
Chapter02/it-runs-in-renode/: CMakeLists.txt
Chapter02/it-runs-in-renode-gen-script/: CMakeLists.txt
Chapter02/it-runs-in-renode/platform/: STM32F072C8Tx_FLASH.ld
Chapter03/cmake-module/: CMakeLists.txt
Chapter03/first-lib/: CMakeLists.txt
Chapter03/first-lib/platform/: CMakeLists.txt
Chapter03/hal-target/: main.c  run_hello_world.resc
Chapter03/hal-target/platform/: CMakeLists.txt
Chapter03/hal-target/platform/hal-conf/: stm32f0xx_hal_conf.h
Chapter03/interface-lib/: CMakeLists.txt
Chapter03/object-lib/: CMakeLists.txt
Chapter03/object-lib/platform/src/: platform_hal.c  syscall_stubs.c
Chapter03/subdirectory/: CMakeLists.txt
Chapter03/subdirectory/platform/: CMakeLists.txt  startup_stm32f072xb.s
Chapter03/subdirectory/platform/inc/: stm32f0xx_hal_conf.h
